# dopamint-arena

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
backend/explorer/: Cargo.toml
backend/explorer/migrations/0001_settlement/: down.sql  up.sql
backend/explorer/migrations/0002_pending_proof/: down.sql  up.sql
backend/explorer/migrations/0003_metric_bucket/: down.sql  up.sql
backend/explorer/migrations/0004_settlement_composite_pk/: down.sql  up.sql
backend/explorer/migrations/0005_pending_s3_archive/: down.sql  up.sql
backend/explorer/src/: api.rs  events.rs  handler.rs  lib.rs  s3read.rs  schema.rs
backend/explorer/tests/: pending_proof_reconcile.rs  settlement_batch_upsert.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs  memory.rs  postgres.rs
backend/transcript-store/: Cargo.toml
backend/transcript-store/src/: lib.rs
backend/transcript-stream/: Cargo.toml
backend/transcript-stream/src/: lib.rs
backend/tunnel-manager/: .env.example  Cargo.toml  Dockerfile
backend/tunnel-manager/scripts/: verify-settle-pipeline.sh
backend/tunnel-manager/smoke/: affinity-smoke.sh  docker-compose.affinity-smoke.yml  haproxy.cfg
backend/tunnel-manager/src/: archive_queue.rs  archive_worker.rs  auth.rs  chat_store.rs  config.rs  enoki.rs  error.rs  main.rs  ollama.rs  routes.rs  s3.rs  settle_batch.rs  settle_queue.rs  settle_worker.rs  state.rs  stats.rs  stats_counter.rs  sui.rs  sui_rpc.rs  wallet.rs  walrus.rs
backend/tunnel-manager/src/fleet/: arena_anchor.rs  arena_opener.rs  arena_rendezvous.rs  bus_transport.rs  colocated.rs  mod.rs  transcript_upload.rs  ws.rs
backend/tunnel-manager/src/mp/: auth.rs  matchmaking.rs  mod.rs  protocol.rs  relay.rs  ws.rs
backend/tunnel-manager/src/store/: memory.rs  mod.rs  redis.rs
backend/tunnel-manager/tests/: wallet_pool_smoke.rs
frontend/src/bench/rust-blackjack/: Cargo.toml
frontend/src/bench/rust-blackjack/src/: main.rs
rust/engine/sui-tunnel-anchor/: Cargo.toml
rust/engine/sui-tunnel-anchor/src/: lib.rs
rust/engine/tunnel-harness/: Cargo.toml
rust/engine/tunnel-harness/src/: anchor.rs  driver.rs  error.rs  frame.rs  instrument.rs  lib.rs  observer.rs  party_driver.rs  seat.rs  transcript.rs  types.rs  wire_hex.rs
rust/engine/tunnel-harness/src/anchor/: noop.rs
rust/engine/tunnel-harness/src/channel/: mod.rs
rust/engine/tunnel-harness/src/frame/: bcs.rs  json.rs  mod.rs  postcard.rs
rust/engine/tunnel-harness/src/frame_transport/: mod.rs  (+1 more)
rust/engine/tunnel-harness/tests/: anchor_self_play.rs
rust/fleet/bench/: Cargo.toml
rust/fleet/bench/src/: cgroup.rs  cli.rs  driver.rs  heartbeat.rs  humanize.rs  lib.rs  main.rs  party_driver.rs  pre_open_gate.rs  report.rs  resources.rs  settle_wave_gate.rs  swarm.rs
rust/fleet/core/: Cargo.toml
rust/fleet/core/src/: lib.rs  match_channel.rs  peer.rs  play_match.rs  relay_channel.rs  relay_envelope.rs  relay_ws.rs  signer_durable.rs
rust/fleet/serve/: Cargo.toml
rust/fleet/serve/src/: driver.rs  heartbeat.rs  lib.rs  supervisor.rs
rust/fleet/serve/tests/: blackjack_self_play.rs  payments_self_play.rs  public_api_names.rs  serving_unit_reports.rs
rust/fleet/superx/: Cargo.toml
rust/fleet/superx/src/: client.rs  daemon.rs  ids.rs  lib.rs  main.rs  merge.rs  pool.rs  proto.rs  registry.rs  runconfig.rs  sink.rs  spawn.rs
rust/fleet/superx/tests/: daemon_unix.rs  daemon_ws.rs  e2e.rs  graceful_stop.rs  spawn_modes.rs  swarm_conservation.rs  watch_stream.rs
rust/protocols/battleship/: Cargo.toml
rust/protocols/battleship/src/: lib.rs  strategy.rs
rust/protocols/battleship/tests/: strategy.rs
rust/protocols/blackjack/: Cargo.toml
rust/protocols/blackjack/src/: duel.rs  lib.rs  strategy.rs  v2.rs
rust/protocols/blackjack/tests/: blackjack_v2.rs  legacy_strategy.rs  seat_self_play.rs  self_play.rs  ts_encode_state_parity.rs
rust/protocols/quantum-poker/: Cargo.toml
rust/protocols/quantum-poker/src/: lib.rs  strategy.rs
rust/protocols/tic-tac-toe/: Cargo.toml
rust/protocols/tic-tac-toe/src/: lib.rs  strategy.rs
rust/protocols/tic-tac-toe/tests/: tic_tac_toe.rs
rust/services/bot-fleet/: Cargo.toml
rust/services/bot-fleet/src/: anchor.rs  lib.rs  live_runner.rs  peer.rs  play_match.rs  relay_client.rs  relay_wire.rs
rust/services/bot-fleet/tests/: game_over_relay.rs  play_match_vs_stand_in.rs
tools/rustbench/: Cargo.toml  Dockerfile
tools/rustbench/src/: cli.rs  driver.rs  lib.rs  main.rs  report.rs
tools/rustbench/src/engine/: codec.rs  commitment.rs  crypto.rs  frame.rs  mod.rs  tunnel.rs  wire.rs
tools/rustbench/src/fleet/: cgroup.rs  mod.rs  resources.rs  stats.rs  swarm.rs
tools/rustbench/src/game/: blackjack.rs  mod.rs
tools/rustbench/tests/: bench_smoke.rs  blackjack_match.rs  golden.rs
tools/rustbench/tests/vectors/: blackjack_match.json  core.json
wallet-pool/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
wallet-pool/core/: Cargo.toml
wallet-pool/core/src/: blob.rs  crypto.rs  envelope.rs  error.rs  filter.rs  lib.rs  select.rs
wallet-pool/examples/: full_demo.rs  full_demo_buck.rs
wallet-pool/s3/: Cargo.toml
wallet-pool/s3/examples/: file_transfer_master_mtps.rs  s3_create_1m_pool.rs  s3_create_pool.rs  s3_demo.rs  s3_export_1m_addresses.rs  s3_full_demo_buck.rs  s3_fund_300_members_mtps.rs  s3_transfer_master_mtps.rs  s3_verify_300_members_mtps.rs
wallet-pool/s3/src/: lib.rs
wallet-pool/s3/tests/: s3_store.rs
wallet-pool/scripts/: e2e.ts
wallet-pool/src/: balance.test.ts  balance.ts  blob.test.ts  blob.ts  client.rs  create.test.ts  create.ts  crypto.test.ts  crypto.ts  envelope.test.ts  envelope.ts  error.rs  errors.ts  file-store.test.ts  file-store.ts  fund.rs  fund.test.ts  fund.ts  index.test.ts  index.ts  integration.test.ts  key_cache.rs  keycache.test.ts  keycache.ts  lib.rs  listing.test.ts  listing.ts  manage.test.ts  manage.ts  pool.test.ts  pool.ts  rpc.rs  rpc.test.ts  rpc.ts  sign.rs  store.rs  store.ts  types.ts
wallet-pool/tests/: testnet_e2e.rs
(+1472 files in other folders)
