[package]
name = "wallet-pool"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
wallet-pool-core = { path = "core" }
tokio = { workspace = true }
reqwest = { workspace = true }
sui-sdk-types = { workspace = true }
sui-transaction-builder = { workspace = true }
sui-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
moka = { version = "0.12", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
hex = { workspace = true }
