[package]
name = "explorer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "indexer_probe"
path = "src/bin/indexer_probe.rs"

[dependencies]
# Framework indexer path (gate PASSED on rustc 1.95). diesel pinned to the framework's
# RESOLVED graph (diesel-async 0.9.2 -> diesel 2.3.x, diesel_migrations 2.3.x); the plan's
# 0.5/2.2 would recreate the probe #1-2 resolution conflict against the framework.
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
diesel = { version = "2.3", features = ["postgres"] }
diesel-async = { version = "0.9", features = ["bb8", "postgres"] }
diesel_migrations = "2.3"
bcs.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
tokio.workspace = true
