[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
async-trait.workspace = true
sqlx.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json.workspace = true
