[package]
name = "transcript-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Reusable S3 archive of settle-body transcripts, shared by the tunnel-manager (write at
# settle), the explorer api (read to verify), and the bot fleet (write when it settles).
# One canonical object key, one store type — no per-service drift.

[features]
# Exposes `testing::{FakeArchiver, FakeReader}` for downstream unit tests.
testing = []

[dependencies]
async-trait = { workspace = true }
# Bounded-concurrency, in-order chunk fetch on reassembly (`buffered`).
futures = "0.3"
# Library best practice: expose a concrete `Error` (thiserror) rather than `anyhow`, so
# consuming apps can match on failure modes.
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
] }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "http-1x",
    "sigv4a",
] }
# Ring-based rustls (not the default aws-lc-rs) so the workspace keeps one rustls crypto
# provider — matches `wallet-pool-s3`.
aws-smithy-runtime = { version = "1", features = ["tls-rustls"] }

[dev-dependencies]
tokio = { workspace = true }
