[package]
name = "tunnel-manager"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
test-util = []

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tower-http.workspace = true
http = "1"
futures = "0.3"
ed25519-dalek = "2"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
uuid.workspace = true
async-trait.workspace = true
fred.workspace = true
reqwest.workspace = true
hex.workspace = true
sui-sdk-types.workspace = true
sui-transaction-builder.workspace = true
sui-crypto.workspace = true
bcs.workspace = true
base64.workspace = true
aws-config = "1"
aws-sdk-s3 = "1"
transcript-store = { path = "../transcript-store" }
# Direct rustls dep so we can install `ring` as the process-default CryptoProvider at
# startup (Task 7), forcing fred/reqwest/aws-sdk onto one provider. See Cargo.toml
# TLS-provider note + ADR-0023.
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# Co-located fleet (ADR-0024): bots run in-process on the relay over the bus transport, driving the
# same transport-agnostic orchestration the WS bot-fleet uses. `tunnel-harness` is for the
# `FrameTransport`/`RelayTransport` error type the seam returns.
fleet-core = { path = "../../rust/fleet/core" }
tunnel-harness = { path = "../../rust/engine/tunnel-harness" }
# Funded seat-B identities for on-demand arena bots (PR #124): the 1M-member pool, opened once at
# startup, gives each bot a real on-chain address from `get_member_key`. Gated by WALLET_POOL_ID.
wallet-pool = { path = "../../wallet-pool" }
wallet-pool-core = { path = "../../wallet-pool/core" }
wallet-pool-s3 = { path = "../../wallet-pool/s3" }

[dev-dependencies]
tokio-tungstenite = "0.24"
wiremock = "0.6"
transcript-store = { path = "../transcript-store", features = ["testing"] }
# Constructing a ProtocolId for anchor open() requests in fleet tests.
tunnel-core = { path = "../../rust/engine/tunnel-core" }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
ctor = "0.2"
