[package]
name = "rustbench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
blake2.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde_json = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
hex.workspace = true
