[package]
name = "wallet-pool-s3"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
wallet-pool = { path = ".." }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
wallet-pool-core = { path = "../core" }
sui-sdk-types = { workspace = true }
sui-transaction-builder = { workspace = true }
serde_json = { workspace = true }
