[package]
name = "wallet-pool-s3"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
wallet-pool = { path = ".." }
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
] }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "http-1x",
    "sigv4a",
] }
# Use the ring-based rustls stack instead of the default aws-lc-rs stack so the
# workspace only has one rustls crypto provider.
aws-smithy-runtime = { version = "1", features = ["tls-rustls"] }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
wallet-pool-core = { path = "../core" }
sui-sdk-types = { workspace = true }
sui-transaction-builder = { workspace = true }
serde_json = { workspace = true }
