[package]
name = "tunnel-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tunnel-core = { path = "../tunnel-core" }
serde = { workspace = true }
serde_json = { workspace = true }
hex.workspace = true
bcs.workspace = true
postcard.workspace = true
serde-big-array = { workspace = true }
tokio = { workspace = true }
