[package]
name = "fleet-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "fleet-bench"
path = "src/main.rs"

[dependencies]
tunnel-telemetry = { path = "../../engine/telemetry" }
tunnel-core = { path = "../../engine/tunnel-core" }
tunnel-harness = { path = "../../engine/tunnel-harness" }
sui-tunnel-anchor = { path = "../../engine/sui-tunnel-anchor" }
fleet-serve = { path = "../serve" }
tunnel-api-credits = { path = "../../protocols/api-credits" }
tunnel-battleship = { path = "../../protocols/battleship" }
tunnel-blackjack = { path = "../../protocols/blackjack" }
tunnel-bomb-it = { path = "../../protocols/bomb-it" }
tunnel-caro = { path = "../../protocols/caro" }
tunnel-chat = { path = "../../protocols/chat" }
tunnel-cross = { path = "../../protocols/cross" }
tunnel-payments = { path = "../../protocols/payments" }
tunnel-quantum-poker = { path = "../../protocols/quantum-poker" }
tunnel-tic-tac-toe = { path = "../../protocols/tic-tac-toe" }
tunnel-world-canvas = { path = "../../protocols/world-canvas" }
clap = { workspace = true }
sysinfo.workspace = true
getrandom.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# The bench spawns many worker threads that allocate heavily on the per-move
# path (frame codec, transcript buffers); jemalloc's per-thread arenas cut the
# global-allocator contention that otherwise caps multi-core throughput.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
hex.workspace = true
wiremock = "0.6"
