[package]
name = "fleet-superx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "fleet-superx"
path = "src/main.rs"

[lib]
name = "fleet_superx"
path = "src/lib.rs"

[dependencies]
tunnel-core = { path = "../../engine/tunnel-core" }
tunnel-harness = { path = "../../engine/tunnel-harness" }
tunnel-telemetry = { path = "../../engine/telemetry" }
sui-tunnel-anchor = { path = "../../engine/sui-tunnel-anchor" }
tunnel-blackjack = { path = "../../protocols/blackjack" }
tunnel-payments = { path = "../../protocols/payments" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "net", "sync", "time", "io-util", "signal"] }
# Localhost heartbeat sink HTTP server (Phase C); workspace-pinned axum 0.7.
axum = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
sysinfo = { workspace = true }
getrandom.workspace = true
# SIGTERM propagation to swarm subprocesses for graceful stop (Task B9).
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"
