[package]
name = "tunnel-blackjack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tunnel-core = { path = "../../engine/tunnel-core" }
tunnel-harness = { path = "../../engine/tunnel-harness" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
bcs.workspace = true
hex.workspace = true
tokio = { workspace = true }
