[package]
name = "tunnel-quantum-poker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tunnel-core = { path = "../../engine/tunnel-core" }
tunnel-harness = { path = "../../engine/tunnel-harness" }
serde = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
